context-aware tab completions